deploy/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-consumer
spec:
  selector:
    matchLabels:
      app: keda-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: keda-consumer
    spec:
      containers:
        - name: keda-consumer
          image: oerdogan90/keda-consumer
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "80m"
            limits:
              memory: "128Mi"
              cpu: "120m"
          ports:
            - containerPort: 8080
