deploy/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keda-producer
spec:
  selector:
    matchLabels:
      app: keda-producer
  replicas: 3
  template:
    metadata:
      labels:
        app: keda-producer
    spec:
      containers:
        - name: keda-producer
          image: oerdogan90/keda-producer
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "80m"
            limits:
              memory: "128Mi"
              cpu: "120m"
          ports:
            - containerPort: 8080
