deploy/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-producer
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: keda-producer
