deploy/producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keda-producer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: keda-producer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-producer
                port:
                  number: 8080
